# Parsflow

./: .gitignore  README.md  comprehensive_parser.py  image_handler.py  pyproject.toml  simple_pdf_parser.py
UI/: README.md  app.js  index.html  results.html  results.js  styles.css
api/: .env.example  .gitignore  IMAGE_DESCRIPTION_GUIDE.md  README.md  __init__.py  config.py  main.py  models.py  parser.py  storage.py  test_api.py  utils.py
api/rag/: .env.example  README.md  config.py  image_enrichment.py  multimodal_rag.py  quickstart.py  requirements.txt  simple_rag.py
docs/: AGENTIC_ARCHITECTURE_(future_work).md  IMAGE_HANDLING_GUIDE.md  PARSER_GUIDE.md  POTENTIAL_IMPROVEMENTS.md  text-items-explained.md
examples/: image_description_gemini.py  image_description_vlm.py
output/: document_native.json  gemini_descriptions.json  gemini_descriptions.md  markdown_custom.md  markdown_embedded.md  markdown_placeholder.md  markdown_referenced.md
output/images/: metadata.json
